# faredrop

./: README.md
src/backend/: pyproject.toml
src/backend/app/: main.py
src/backend/app/api/: router.py
src/backend/app/api/public/: user_routes.py
src/backend/app/db/: .dbml  db_client.py
src/backend/app/models/: __init__.py
src/backend/app/models/alert/: __init__.py  price_alert_model.py
src/backend/app/models/auth/: __init__.py  user_model.py
src/backend/app/models/aviation/: __init__.py  flight_model.py
src/backend/app/models/public/: __init__.py  flight_model.py  historical_price_model.py  price_alert_model.py  user_model.py
src/backend/app/models/transaction/: __init__.py  historical_price_model.py
src/backend/app/schemas/public/: user_schemas.py
