[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.poetry]
name = "app"
version = "0.1.0"
description = "Roamance is an application designed to monitor flight prices, flight statuses, and alert users of relevant information."
authors = ["Lulu Duan <luxiangduan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
sqlmodel = "^0.0.7"
pydantic = "^1.8.2"
alembic = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
isort = "^5.9.3"